ユーザーマイページの作成

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,7 +4,7 @@ header
 
 -# マイページ左側のメニューリンク一覧
 - contents = ["マイページ", "出品する", "出品した商品", "購入した商品", "発送元・お届け先住所変更", "クレジットカードの登録", "ログアウト"]
-- links    = ["",         "",        "",           "",           "",                     "",                   ""]
+- links    = ["user_path", "", "", "", "", "", "destroy_user_session_path"]
 
 .mypage-wrapper
   .mypage-wrapper__contents
@@ -15,21 +15,23 @@ header
           = icon("fas", "chevron-right", class: "icon")
 
     .mypage-wrapper__contents__right
-      -# = image_tag "bg-topMiddleDl-pict.jpg", class: "mypage-wrapper__contents__right__back-image"
-      -# = image_tag "member_photo_noimage_thumb.png", class: "mypage-wrapper__contents__right__user-image"
+      = image_tag "pict-reason-03.jpg", class: "mypage-wrapper__contents__right__back-image"
+      = image_tag "member_photo_noimage_thumb.png", class: "mypage-wrapper__contents__right__user-image"
       .mypage-wrapper__contents__right__user-name
-      freemarket_sample_75b
+        freemarket_sample_75b
       .mypage-wrapper__contents__right__title
         .mypage-wrapper__contents__right__title__notice
           お知らせ
         .mypage-wrapper__contents__right__title__todo
           やることリスト
-        .mypage-wrapper__contents__right__notices
-          事務局から個別メッセージ「ログイン通知」
-        .mypage-wrapper__contents__right__notices
-          事務局から個別メッセージ「ログイン通知」
-        .mypage-wrapper__contents__right__view-list
-          一覧を見る
+      .mypage-wrapper__contents__right__notices
+        事務局から個別メッセージ「ログイン通知」
+      .mypage-wrapper__contents__right__notices
+        事務局から個別メッセージ「ログイン通知」
+      .mypage-wrapper__contents__right__notices
+        事務局から個別メッセージ「ログイン通知」
+      .mypage-wrapper__contents__right__view-list
+        一覧を見る
 
 footer
 -# footerの部分テンプレート
