ログアウト画面編集、クレジットカード登録画面ファイルの追加

--- a/app/assets/stylesheets/users/logout.scss
+++ b/app/assets/stylesheets/users/logout.scss
@@ -11,9 +11,13 @@
         background-color: #3ccace;
         margin: 50px auto;
         line-height: 50px;
+        &__btn {
+          display: block;
+        }
         a {
           color: white;
           text-decoration: none;
+          text-align: center;
         }
       }
     }
