--- a/app/views/users/logout.html.haml
+++ b/app/views/users/logout.html.haml
@@ -7,7 +7,8 @@ header
 
     .mypage-wrapper__contents__right-logout
       .mypage-wrapper__contents__right-logout__content
-        = link_to 'ログアウト', class: "mypage-wrapper__contents__right-logout__content__btn"
+        = link_to '', class: "mypage-wrapper__contents__right-logout__content__btn" do
+          ログアウト
 
 footer
 -# = render "layouts/footer"
