--- a/app/views/view/_yymmdd.html.haml
+++ b/app/views/view/_yymmdd.html.haml
@@ -1,3 +1,4 @@
+-# ビューを整えるためとりあえず記述。以後form_withのオプションなど使用予定
 %form{:action => "#", :method => "post", :name => "yyyymmdd"}
   %select{:name => "select",:class => "year"}
     %option{:value => ""} --
