--- a/app/views/view/index.html.haml
+++ b/app/views/view/index.html.haml
@@ -7,7 +7,7 @@
         会員情報入力
       .form__input
         .form__input--nicname
-          .form__title
+          .form__input--title
             ニックネーム
             %span.red 必須
           %input{:name => "name", :type => "text",:class => "input-tag",:placeholder => "例)フリマ太郎"}/
