--- a/app/views/view/_header.html.haml
+++ b/app/views/view/_header.html.haml
@@ -1,3 +1,3 @@
 .header
   .header__content
-    = link_to image_tag(src= "logo.png", class: "image-top"),"#"
+    = link_to image_tag("logo.png", class: "image-top"),"#"
