コメントアウトの削除

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+// マイページ表示用CSSの読み込み
 @import "users/show";
 @import "users/logout";
 @import "users/card";
