--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,11 +1,3 @@
-// 変数定義
-@mixin title {
-  text-shadow: 0 0 5px rgba(0,0,0,0.4);
-  color: #fff;
-  text-align: center;
-}
-
-
 .app-banner {
   background-image: url("bg-appBanner-pict.jpg");
   background-position: center;
@@ -16,12 +8,12 @@
     font-size: 24px;
     font-weight: bold;
     line-height: 1.4;
-    @include title;
+    @include footer_title;
     padding-top: 100px;
   }
   &__subtitle {
     font-size: 35px;
-    @include title;
+    @include footer_title;
   }
 }
 
