--- a/app/views/tops/index.html.haml
+++ b/app/views/tops/index.html.haml
@@ -9,14 +9,14 @@
       フリマアプリです
     
   .main-reason
-    %h2{class: "main-title"} FURIMAが選ばれる3つの理由
-    %ul{class: "main-lists"}
+    %h2.main-title FURIMAが選ばれる3つの理由
+    %ul.main-lists
       %li
         .main-lists__first
           =image_tag "/assets/pict-reason-01.jpg",class: "main-lists__image"
-          %span{class: "main-lists__first--number"} 1
-        %span{class: "main-lists__subtitle"} 3分
-        %span{class: "main-lists__bold"} ですぐに出品 
+          %span.main-lists__first--number 1
+        %span.main-lists__subtitle 3分
+        %span.main-lists__bold ですぐに出品 
         %p  
         スマホで入力するだけで簡単に
         %br
@@ -24,9 +24,9 @@
       %li
         .main-lists__second
           =image_tag "/assets/pict-reason-02.jpg",class: "main-lists__image"
-          %span{class: "main-lists__second--number"} 2
-        %span{class: "main-lists__subtitle"} シンプル
-        %span{class: "main-lists__bold"} で使いやすい
+          %span.main-lists__second--number 2
+        %span.main-lists__subtitle シンプル
+        %span.main-lists__bold で使いやすい
         %p  
         めんどくさい入力は必要なく、
         %br 
@@ -34,10 +34,11 @@
       %li
         .main-lists__third
           =image_tag "/assets/pict-reason-03.jpg",class: "main-lists__image"
-          %span{class: "main-lists__third--number"} 3
-        %span{class: "main-lists__bold"} 手数料 
-        %span{class: "main-lists__subtitle"} 業界最安
+          %span.main-lists__third--number 3
+        %span.main-lists__bold 手数料 
+        %span.main-lists__subtitle 業界最安
         %p  最大3%でお得に出品&購入!
+  
   .main-midle
     .main-midle__title
       会員数日本一位
@@ -48,13 +49,12 @@
       %br
       ほしかったあの商品に出会えるかもしれません。
 
-
   .main-keypoint
-    %h2{class: "main-keypoint__title"} FURIMAの特徴
-    %ul{class: "main-keypoint__lists"}
+    %h2.main-keypoint__title FURIMAの特徴
+    %ul.main-keypoint__lists
       %li
         =image_tag "/assets/icon-01.png",class: "main-keypoint__lists--image"
-        %h3{class: "main-keypoint__lists--subtitle"} 簡単に売り買いできる
+        %h3.main-keypoint__lists--subtitle 簡単に売り買いできる
         スマホひとつで、いつで
         %br
         もどこでも簡単に出品・
@@ -62,7 +62,7 @@
         購入が可能！
       %li
         =image_tag "/assets/icon-02.png",class: "main-keypoint__lists--image"
-        %h3{class: "main-keypoint__lists--subtitle"} 売上金は即翌日振り込みに対応
+        %h3.main-keypoint__lists--subtitle 売上金は即翌日振り込みに対応
         午前9時までに振込を依
         %br
         頼いただければ、翌日に
@@ -72,7 +72,7 @@
         ます！
       %li
         =image_tag"/assets/icon-03.png",class: "main-keypoint__lists--image"
-        %h3{class: "main-keypoint__lists--subtitle"} 様々な支払いに対応
+        %h3.main-keypoint__lists--subtitle 様々な支払いに対応
         お支払いは、クレジット
         %br
         カードだけではなく、ポイ
@@ -82,9 +82,9 @@
         方法があります。
     
   .main-categories
-    %h2{class: "main-categories__title"} ピックアップカテゴリー
+    %h2.main-categories__title ピックアップカテゴリー
     =link_to "新規投稿商品" ,"#",class: "main-categories__subtitle"
-    %ul{class:"main-categories__lists"}
+    %ul.main-categories__lists
       %li
         =image_tag "/assets/sample-image1.jpg",class: "main-categories__lists--image" 
       %li
@@ -93,9 +93,9 @@
         =image_tag "/assets/sample-image3.jpg",class: "main-categories__lists--image"
 
   .main-brands
-    %h2{class: "main-brands__title"} ピックアップブランド
+    %h2.main-brands__title ピックアップブランド
     =link_to "アーカイバ","#",class: "main-brands__subtitle"
-    %ul{class:"main-brands__lists"}
+    %ul.main-brands__lists
       %li
         =image_tag "/assets/sample-image1.jpg",class: "main-brands__lists--image" 
       %li
