マイページのコメントアウト変更
ヘッダーとフッター用の部分テンプレートのコメントアウトを解除

--- a/app/views/users/card_index.html.haml
+++ b/app/views/users/card_index.html.haml
@@ -1,5 +1,4 @@
-header
--# = render "layouts/header"
+= render "layouts/header"
 
 .mypage-wrapper
   .mypage-wrapper__contents
@@ -18,6 +17,4 @@ header
           支払い方法について
           = icon("fas", "chevron-right", class: "icon")
 
-
-footer
--# = render "layouts/footer"
+= render "layouts/footer"
