--- a/app/views/users/card_register.html.haml
+++ b/app/views/users/card_register.html.haml
@@ -1,5 +1,4 @@
-header
--# = render "layouts/header"
+= render "layouts/header"
 
 .mypage-wrapper
   .mypage-wrapper__contents
@@ -60,5 +59,4 @@ header
           = link_to "", class: "mypage-wrapper__contents__right-card-register__form__add__btn" do
             追加する
 
-footer
--# = render "layouts/footer"
+= render "layouts/footer"
