--- a/app/views/users/logout.html.haml
+++ b/app/views/users/logout.html.haml
@@ -1,5 +1,4 @@
-header
--# = render "layouts/header"
+= render "layouts/header"
 
 .mypage-wrapper
   .mypage-wrapper__contents
@@ -10,5 +9,4 @@ header
         = link_to '', class: "mypage-wrapper__contents__right-logout__content__btn" do
           ログアウト
 
-footer
--# = render "layouts/footer"
+= render "layouts/footer"
