--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,4 @@
-header
--# = render "layouts/header"
+= render "layouts/header"
 
 .mypage-wrapper
   .mypage-wrapper__contents
@@ -24,5 +23,4 @@ header
       .mypage-wrapper__contents__right__view-list
         一覧を見る
 
-footer
--# = render "layouts/footer"
+= render "layouts/footer"
