--- a/app/views/itemdeta/index.html.haml
+++ b/app/views/itemdeta/index.html.haml
@@ -1,5 +1,4 @@
-.header
-  ヘッダーが入ります
+=render "layouts/header"
 .ground
   .background
     .category
@@ -110,5 +109,4 @@
         =link_to "次の商品 >","#"
     .related__items
       =link_to "メンズをもっと見る","#"
-  .footer
-  フッターがはいります
+  =render "layouts/footer"
