--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,9 +10,9 @@
 @import "items/header";
 @import "items/tops";
 @import "items/footer";
+@import "items/show";
+@import "items/confimation";
 @import "exhibition";
 @import "view";
 @import "new";
 @import "edit";
-@import"items/confimation";
-@import "itemdeta";
