--- a/app/assets/stylesheets/items/show.scss
+++ b/app/assets/stylesheets/items/show.scss
@@ -5,7 +5,7 @@ $logo-color: #33CCCC;
   width: 100vw;
 }
 .background{
-  background-color: $backColor;
+  // background-color: $backColor;
   height: 1950px;
   width: 100vw;
   .category{
@@ -148,7 +148,7 @@ $logo-color: #33CCCC;
       margin-bottom: 10px;
     }
     &__note{
-      background-color: $backColor;
+      // background-color: $backColor;
       height: 46px;
       margin-bottom: 20px;
       padding: 5px;
