--- a/app/assets/stylesheets/items/_confimation.scss
+++ b/app/assets/stylesheets/items/_confimation.scss
@@ -1,7 +1,7 @@
 
 // ヘッダー
 .header {
-  background-color: $backColor;
+  // background-color: $backColor;
   height: 120px;
   width: 100vw;
   &__content {
@@ -19,7 +19,7 @@
 
 //  メイン
 .confimation{
-  background-color:$backColor; 
+  // background-color:$backColor; 
   .confimation-main {
     width: 700px;
     margin: 0 auto;
@@ -134,12 +134,9 @@
   }
 }
 
-
-
-
 // フッター 
 .footer {
-  background-color:$backColor;          
+  // background-color:$backColor;
   height: 220px;
   padding: 30px ;
   &__nav{
