--- a/app/assets/stylesheets/config/_mixin.scss
+++ b/app/assets/stylesheets/config/_mixin.scss
@@ -86,3 +86,35 @@
   font-size: 14px;
   color: #0099e8;  
 }
+
+
+// 商品出品ページで使用
+@mixin form {
+  height: 46px;
+  width: 620px;
+}
+@mixin btn {
+  margin-bottom: 20px;  
+  height: 46px;
+  line-height: 46px;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 5px;
+}
+@mixin link {
+  opacity: .6;
+  text-decoration: underline;
+}
+$image-color:#33cccc;
+$gray:#f5f5f5;
+
+
+// 商品詳細ページ
+$logo-color: #33CCCC;
+
+// ログイン変数定義
+@mixin input-brock{
+  height: 100px;
+  margin-bottom: 10px;
+}
+$backColor: #EEEEEE;
