fix_view_image_path

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,5 +1,5 @@
 .app-banner {
-  background-image: url("bg-appBanner-pict.jpg");
+  background-image: image-url("bg-appBanner-pict.jpg");
   background-position: center;
   background-size: cover;
   height: 350px;
