--- a/app/views/items/confimation.html.haml
+++ b/app/views/items/confimation.html.haml
@@ -11,7 +11,7 @@
         .confimation-main__page__content__inner
           .confimation-main__page__content__inner__box
             .confimation-main__page__content__inner__box__image
-              =image_tag "/assets/sample-image1.jpg",class:"image"
+              =image_tag "sample-image1.jpg",class:"image"
             .confimation-main__page__content__inner__box__item
               %p.item-name 盛りドレスワンピースです
               %p.item-price
