--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -14,7 +14,7 @@
       %h2.contents-footer FURIMAを見る
       =link_to "カテゴリー一覧","#",class: "contents--infomation"
       =link_to "ブランド一覧","#",class: "contents--infomation"
-      =image_tag "/assets/logo-white.png",class: "footer-image"
+      =image_tag "logo-white.png",class: "footer-image"
     %li.contents
       %h2.contents-footer ヘルプ&ガイド
       =link_to "FURIMAガイド","#",class: "contents--infomation"
