--- a/app/assets/stylesheets/items/_index.scss
+++ b/app/assets/stylesheets/items/_index.scss
@@ -1,6 +1,6 @@
 // 変数定義
 .main-visual {
-  background-image: url("bg-mainVisual-pict_pc.jpg");
+  background-image: image-url("bg-mainVisual-pict_pc.jpg");
   @include image;
   height: 600px;
   &__title {
@@ -60,7 +60,7 @@
 }
 
 .main-midle {
-  background-image: url("bg-topMiddleDl-pict.jpg");
+  background-image: image-url("bg-topMiddleDl-pict.jpg");
   @include image;
   height: 400px;
   &__title {
