--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -14,7 +14,7 @@
     %ul.main-lists
       %li
         .main-lists__first
-          =image_tag "/assets/pict-reason-01.jpg",class: "main-lists__image"
+          =image_tag "pict-reason-01.jpg",class: "main-lists__image"
           %span.main-lists__first--number 1
         %span.main-lists__subtitle 3分
         %span.main-lists__bold ですぐに出品 
@@ -24,7 +24,7 @@
         出品できる！
       %li
         .main-lists__second
-          =image_tag "/assets/pict-reason-02.jpg",class: "main-lists__image"
+          =image_tag "pict-reason-02.jpg",class: "main-lists__image"
           %span.main-lists__second--number 2
         %span.main-lists__subtitle シンプル
         %span.main-lists__bold で使いやすい
@@ -34,7 +34,7 @@
         検索も購入もスムーズ！
       %li
         .main-lists__third
-          =image_tag "/assets/pict-reason-03.jpg",class: "main-lists__image"
+          =image_tag "pict-reason-03.jpg",class: "main-lists__image"
           %span.main-lists__third--number 3
         %span.main-lists__bold 手数料 
         %span.main-lists__subtitle 業界最安
@@ -54,7 +54,7 @@
     %h2.main-keypoint__title FURIMAの特徴
     %ul.main-keypoint__lists
       %li
-        =image_tag "/assets/icon-01.png",class: "main-keypoint__lists--image"
+        =image_tag "icon-01.png",class: "main-keypoint__lists--image"
         %h3.main-keypoint__lists--subtitle 簡単に売り買いできる
         スマホひとつで、いつで
         %br
@@ -62,7 +62,7 @@
         %br
         購入が可能！
       %li
-        =image_tag "/assets/icon-02.png",class: "main-keypoint__lists--image"
+        =image_tag "icon-02.png",class: "main-keypoint__lists--image"
         %h3.main-keypoint__lists--subtitle 売上金は即翌日振り込みに対応
         午前9時までに振込を依
         %br
@@ -72,7 +72,7 @@
         %br
         ます！
       %li
-        =image_tag"/assets/icon-03.png",class: "main-keypoint__lists--image"
+        =image_tag"icon-03.png",class: "main-keypoint__lists--image"
         %h3.main-keypoint__lists--subtitle 様々な支払いに対応
         お支払いは、クレジット
         %br
@@ -87,21 +87,21 @@
     =link_to "新規投稿商品" ,"#",class: "main-categories__subtitle"
     %ul.main-categories__lists
       %li
-        =image_tag "/assets/sample-image1.jpg",class: "main-categories__lists--image" 
+        =image_tag "sample-image1.jpg",class: "main-categories__lists--image" 
       %li
-        =image_tag "/assets/sample-image2.jpg",class: "main-categories__lists--image"
+        =image_tag "sample-image2.jpg",class: "main-categories__lists--image"
       %li
-        =image_tag "/assets/sample-image3.jpg",class: "main-categories__lists--image"
+        =image_tag "sample-image3.jpg",class: "main-categories__lists--image"
 
   .main-brands
     %h2.main-brands__title ピックアップブランド
     =link_to "アーカイバ","#",class: "main-brands__subtitle"
     %ul.main-brands__lists
       %li
-        =image_tag "/assets/sample-image1.jpg",class: "main-brands__lists--image" 
+        =image_tag "sample-image1.jpg",class: "main-brands__lists--image" 
       %li
-        =image_tag "/assets/sample-image2.jpg",class: "main-brands__lists--image"
+        =image_tag "sample-image2.jpg",class: "main-brands__lists--image"
       %li
-        =image_tag "/assets/sample-image3.jpg",class: "main-brands__lists--image"
+        =image_tag "sample-image3.jpg",class: "main-brands__lists--image"
 
 =render 'layouts/footer'
