--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -15,7 +15,7 @@
           ブランド     
       %ul
         %li.header-nav-right
-          =link_to "ログイン","#",class: "header-nav-right__btn"
+          =link_to "ログイン","/view/new",class: "header-nav-right__btn"
         %li.header-nav-right
-          =link_to "新規会員登録","#",class: "header-nav-right__btn"
+          =link_to "新規会員登録","/view",class: "header-nav-right__btn"
 
