--- a/app/assets/stylesheets/view/_new.scss
+++ b/app/assets/stylesheets/view/_new.scss
@@ -1,4 +1,4 @@
-// ログイン画面
+// 新規登録画面
 .page {
   height: 100vh;
   width: 100vw;
@@ -20,10 +20,10 @@
   //  フォーム
   .form {
     background-color: $backColor;
-    height: 1200px;
+    height: 1350px;
     &__content {
       background-color: white;
-      height: 1200px;
+      height: 1350px;
       width: 720px;
       margin: 0 auto;
       &--title{
@@ -40,15 +40,21 @@
         height: 1115px;
         margin: 0 auto;
         padding: 30px 0 20px 0;
-        &--nicname{
+        &--nickname{
           height: 100px;
           margin-bottom: 10px;
+        }
+        &--title{
+          font-size: 20px;
         }
       }
         .form__input--email {
           @include input-brock;
         }
         .form__input--password{
+          @include input-brock;
+        }
+        .form__input--password-confirmation{
           @include input-brock;
         }
         .fidentification{
@@ -77,7 +83,7 @@
           font-size: 14px;
           text-align: center;
         }
-        button{
+        .button{
           background-color: #33CCCC;
           height: 50px;
           width: 400px;
@@ -132,10 +138,7 @@
           width: 196px;
           text-indent: 1em;
         }
-        .select-year,.select-month,.select-day{
-          height: 40px;
-          width: 100px;
-        }
+       
     }
   }
 
@@ -176,4 +179,18 @@
       margin: 0 auto;
     }
   }
+}
+
+.nicknameBox,.emailBox,.passwordBox,.confirmation{
+  height: 40px;
+  width: 400px;
+  text-indent: 1em;
+}
+#birthday_birth_date_1i{
+  height: 40px;
+  width: 140px;
+}
+#birthday_birth_date_2i, #birthday_birth_date_3i{
+  height: 40px;
+  width: 90px;
 }
