ヘッダーへカテゴリリストの表示追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "config/mixin";
 @import "header";
 @import "footer";
+@import "category";
 
 @import "users/show";
 @import "users/logout";
