--- a/app/assets/stylesheets/items/_exhibition.scss
+++ b/app/assets/stylesheets/items/_exhibition.scss
@@ -65,6 +65,11 @@
           background-color: $image-color;
           padding: 1px 4px 2px;
         }
+        .category-select-wrapper__box__select{
+          height: 46px;
+          width: 620px;
+          font-weight: normal;
+        }
       }
 
       &__uploader{
