--- a/app/views/items/exhibition.html.haml
+++ b/app/views/items/exhibition.html.haml
@@ -33,7 +33,12 @@
         .exhibition__main__container__topic
           %label カテゴリー
           %span 必須
-        =form.select:category,[],prompt:"選択してください"
+          -# カテゴリ選択欄の表示
+          .category-select-wrapper
+            .category-select-wrapper__box
+              = form.select :category, @category_parent_array, {}, {class: "category-select-wrapper__box__select", id: "parent_category"}
+        -# =form.select:category,[],prompt:"選択してください"
+
         .exhibition__main__container__topic
           %label 商品の状態
           %span 必須
@@ -83,9 +88,9 @@
   .exhibition__footer
     %ul.exhibition__footer__poricy
       %li= link_to "プライバシーポリシー","#"
-      %li= link_to "メルカリ利用規約","#"
+      %li= link_to "FURIMA利用規約","#"
       %li= link_to "特定商取引に関する法律表記","#"
     = image_tag('logo-mini.png',height:"65px",width:"80px",class:"logo")
-    %p © Mercari, Inc.
+    %p © FURIMA, Inc.
       
       
