商品出品画面へカテゴリ選択欄の導入

--- a/app/assets/stylesheets/_category.scss
+++ b/app/assets/stylesheets/_category.scss
@@ -7,7 +7,7 @@
   z-index: 2;
   .category-box{
     position: absolute;
-    max-height: 670px;
+    height: 600px;
     background-color: white;
     .parent,.child,.grandchild{
       box-shadow: 1px 1px 4px;
