--- a/app/views/items/exhibition.html.haml
+++ b/app/views/items/exhibition.html.haml
@@ -30,13 +30,13 @@
 
       .exhibition__main__container
         %p 商品の詳細
-        .exhibition__main__container__topic
+        .exhibition__main__container__topic__category
           %label カテゴリー
           %span 必須
           -# カテゴリ選択欄の表示
-          .category-select-wrapper
-            .category-select-wrapper__box
-              = form.select :category, @category_parent_array, {}, {class: "category-select-wrapper__box__select", id: "parent_category"}
+          .listing-select-wrapper
+            .listing-select-wrapper__box
+              = form.select :category, @category_parent_array, {}, {class: 'listing-select-wrapper__box--select', id: 'parent_category'}
         -# =form.select:category,[],prompt:"選択してください"
 
         .exhibition__main__container__topic
