コメントアウトの編集、商品詳細ページへカテゴリ表示

--- a/app/assets/stylesheets/_category.scss
+++ b/app/assets/stylesheets/_category.scss
@@ -1,3 +1,4 @@
+// ヘッダーのカテゴリメニュー用
 .parent,.child,.grandchild{
   display: none;
 }
@@ -37,6 +38,8 @@
       }
     }
   }
+
+  // 親、子、孫カテゴリにカーソルを合わせたときの表示
   &:hover{
     .parent{
       display: block;
