--- a/app/assets/stylesheets/view/_index.scss
+++ b/app/assets/stylesheets/view/_index.scss
@@ -34,6 +34,7 @@
         line-height: 46px;
         margin-left: 64px;
         font-size: 15px;
+        a:visited { color:white;}
       }
 
     }
