--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,8 +1,8 @@
 .page
   = render "view/header"
   .form
-    = form_with model: @user, url: user_registration_path, local: true do |f|
-      .form__content
+    .form__content
+      = form_with model: @user, url: user_registration_path, local: true do |f|
         .form__content--title
           会員情報入力
         .form__input
@@ -33,19 +33,19 @@
             .form__title
               お名前(全角)
               %span.red 必須
-            %div{style: "display:inline-flex"}
-              %form
+            %ul.input__name
+              %li
                 = f.text_field :fast_name, placeholder: "例)山田", class: "input-name"
-              %form
+              %li
                 = f.text_field :last_name, placeholder: "例)太朗", class: "input-name"
           .form__input--name-katakana
             .form__title
               お名前カナ(全角)
               %span.red 必須
-            %div{:style => "display:inline-flex"}
-              %form
+            %ul.input__name
+              %li
                 = f.text_field :fast_name_reading, placeholder: "例)ヤマダ", class: "input-name"
-              %form
+              %li
                 = f.text_field :last_name_reading, placeholder: "例)タロウ", class: "input-name"
           .form__input--birth-date
             .form__title
@@ -53,7 +53,7 @@
               %span.red 必須
             .form__birth-date
               .year
-                != sprintf(f.date_select(:birth_date, prefix:'birthday', prompt:"--",use_month_numbers:true, start_year:Time.now.year, end_year:1900, date_separator:'%s'),'年','月')+'日'
+                = f.date_select(:birth_date, prefix:'birthday', prompt:"--", use_month_numbers:true, start_year:Time.now.year, end_year:1900, date_separator:'/')
           .text-wraning1
             ※本人情報は正しく入力してください
           .text-wraning2
