--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -16,7 +16,7 @@
       %ul
         - if user_signed_in?
           %li.header-nav-right
-            = link_to "マイページ", user_path, class: "header-nav-right__btn"
+            = link_to "マイページ", "/users/#{params[:id]}", class: "header-nav-right__btn"
         -else
           %li.header-nav-right
             = link_to "ログイン", new_user_session_path,class: "header-nav-right__btn"
