--- a/app/views/items/exhibition.html.haml
+++ b/app/views/items/exhibition.html.haml
@@ -3,47 +3,6 @@
     = image_tag('logo.png',height:"49px",width:"185px",class:"logo")
   .exhibition__main
     =form_with(model: @items,local:true,class:"sell-form dropzone", id:"item-dropzone") do |form|
-      -# %h2.sell-form__header
-      -#   商品情報
-      -# .exhibition__main__container.sell-form-container
-      -#   .exhibition__main__container__topic
-      -#     %label.sell-form-container__label 出品画像
-      -#     %span.sell-form-container__require 必須
-      -#   %p 最大10枚までアップロードできます
-      -#   #image-box
-      -#     #previews
-      -#       - if @items.persisted?
-      -#         - @items.images.each_with_index do |image, i|
-      -#           = image_tag image.src.url, data: { index: i }, width: "100", height: '100'
-
-      -#     =form.fields_for :images,class:"exhibition__main__container__uploader" do |image|
-      -#       .exhibition__main__container__uploader__text.dropzone-container.clearfix.js-file_group{"data-index" => "#{image.index}"}
-      -#         #preview
-      -#         .dropzone-are
-      -#           = image.label :url, class: "dropzone-box", for: "upload-image" do
-      -#             .input_area
-      -#               =image.file_field :url, multiple: true,name: "images[url][]",id:"upload-image",class:"upload-image js-file",url:"images[url]",'data-image': 0
-      -#                 %p ここをクリックしてください  
-      -#                 %span.js-remove 削除
-      -#         #preview2
-      -#         .dropzone-area2
-      -#           = image.label :url, class: "dropzone-box", for: "upload-image" do
-      -#             %p 個々をクリックしてください          
-      -#       - if @items.persisted?
-      -#         = image.check_box :_destroy, data:{index:imgae.index},class:"hidden-destroy"
-      -#     - if @items.persisted?
-      -#       .js-file_group{"data-index" => "#{@items.images.count}"}
-      -#         =file_field_tag :url,name:"product[images_attributes][#{@items.images.count}][url]", class: 'js-file'
-      -#         .js-remove 削除
-      -#         -# %i.fa.fa-camera
-      -#         -# %p ドラッグアンドドロップ 
-      -#         -# %p またはクリックしてファイルをアップロード
-      -#     %hr/
-
-
-
-      
-
       .exhibition__main__container
         .exhibition__main__container__topic
           %label 出品画像
@@ -66,9 +25,6 @@
             .js-file_group{"data-index" => "#{@items.images.count}"}
               =file_field_tag :url,name:"product[images_attributes][#{@items.images.count}][url]", class: 'js-file'
               .js-remove 削除
-              -# %i.fa.fa-camera
-              -# %p ドラッグアンドドロップ 
-              -# %p またはクリックしてファイルをアップロード
           %hr/
 
       .exhibition__main__container
@@ -125,7 +81,9 @@
         %hr/
 
         %p user_id（仮）
-        =form.number_field :user_id,id:"price",mini: 300, max: 9999999
+        =form.number_field :user_id,id:"price"
+        %p saler_id（仮）
+        =form.number_field :saler_id,id:"price"
 
 
       .exhibition__main__container
